# autoignition

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.py
.github/workflows/: main.yml
autoignition/: __init__.py  figure.py  simulation.py
docs/: index.md
docs/css/: mkdocstrings.css
test/: test_figure.py
