[project]
name = "autoignition"
version = "0.1.0"
description = "A tool for running, analyzing, and plotting autoignition simulations with Cantera."
authors = [
    {name = "Cory Kinney", email = "cory.kinney@ucf.edu"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cantera>=3.0.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
